--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-      
+    <meta name="description" content="Web site created using create-react-app" />
     <title>HW-5-MOVIES</title>
-
-     </head>
-  <body>
-  
+    <link rel="stylesheet" type="text/css" href="/path/to/your/styles.css">
+</head>
+<body>
     <div id="root"></div>
-   
-  </body>
+    <script src="/path/to/your/script.js"></script>
+</body>
 </html>
